Added a simulated GC pause to springboot-httpbin
